# sth

./: .gitignore  README.md  pyproject.toml
sth/: COA_MERGED.xlsx  Update_Karyawan.csv  __init__.py  a_ke_b.py  api.py  debug.py  hooks.py  jinja.py  modules.txt  put_company.py  rename_cost_center_main_to_umum.py  rename_gl_entry_to_sequential.py  set_cost_center_blok_tm.py  test_post.py  ukuran_kernel.xlsx  update_karyawan.py
sth/api_epcs/: get_data.py
sth/controllers/: accounts_controller.py  budget_controller.py  buku_kerja_mandor.py  plantation_controller.py  prev_doc_validate.py  queries.py  rencana_kerja_controller.py  status_updater.py
sth/custom/: api.py  cek_backdate.py  cek_golongan.py  delivery_note.py  employee.py  gl_entry.py  leasing_api.py  material_request.py  method_ambil_account.py  payment_entry.py  pembuatan_gl_entry.py  period_closing_voucher.py  purchase_invoice.py  purchase_receipt.py  rename_employee_ktp.py  request_for_quotation.py  stock_ledger.py  stock_reconciliation.py  supplier_quotation.py  training_event.py  travel_request.py  warehouse.py
sth/file/: Keg.csv  Kegiatan.csv  TPH_aptp.csv
sth/fixtures/: custom_field.json  property_setter.json  workflow.json  workflow_action_master.json  workflow_state.json
sth/fixtures2/: months.json  payment_settings.json
sth/hr_customize/: __init__.py
sth/legal/: __init__.py  pdfview.html  utils.py
sth/model/: mapper.py
sth/overrides/: accounting_period.py  asset.py  asset_capitalization.py  asset_depreciation_schedule.py  asset_movement.py  attendance.py  bank_account.py  customer.py  (+40 more)
(+2844 files in other folders)
